[package]
name = "aradavid"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "6.1.1"
tokio = { version = "1.28", features = ["full"] }
image = "0.24.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
bytes = "1.4"
futures-util = "0.3"
async-stream = "0.3"

[build-dependencies]
cc = "1.0"
